using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationStrings
{
    
    public static string attackCooldown = "attackCooldown";
    internal const string isMoving = "isMoving";
    internal const string isRunning = "isRunning";
    internal const string isGrounded = "isGrounded";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string isOnWall = "isOnWall";
    internal const string yVelocity = "yVelocity";
    internal static string jumpTrigger = "jump";
    internal static string attackTrigger = "attack";
    public static string rangedAttackTrigger = "rangedAttack";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";
}